@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.33 2003/10/13 00:09:45 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.34 2003/10/13 00:12:30 zhen Exp $
 
 VERSION="2.2"
 
@@ -14,7 +14,6 @@ source include/build_functions.sh
 rm -f /tmp/catalyst-subarches
 include/catalyst-subarches > /tmp/catalyst-subarches
 source /tmp/catalyst-subarches
-
 
 SNAPBALL=${SNAPDIR}/portage-${4}.tar.bz2
 
@@ -44,7 +43,6 @@ enter_chroot() {
 	umount_all
 
 } #end enter
-
 
 if [ "`whoami`" != "root" ]
 then
@@ -93,28 +91,5 @@ case "$1" in
 		fi
 	;;
 esac
-
-## START MAIN PROGRAM ##
-
-start_build() {
-	# more or less a sanity check
-	SUBARCH=$1
-	DESTSTAGE="${2}"
-	DESTVER="${3}"
-	SRCFORTAR=${CHROOTDIR}
-
-	rm -f /tmp/catalyst.settings
-
-	include/catalyst-settings $SUBARCH > /tmp/catalyst.settings
-	source /tmp/catalyst.settings
-
-	CFLAGS="${CFLAGS} -pipe"
-	echo $CFLAGS
-
-	pre_build $2 $3 $4
-	build $2
-	post_build $2
-
-} #end start_build()
 
 # vim ts=4
