@@ -1,12 +1,18 @@
 # ChangeLog for gentoo-src/stager
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.19 2003/10/13 00:09:45 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.20 2003/10/13 00:12:30 zhen Exp $
 
   12 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> catalyst:
   document subarches checking
 
   12 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> catalyst:
   Fix valid subarch test.
+
+  12 Oct 2003; zhen <zhen@gentoo.org> catalyst, include/build_functions.sh,
+  include/functions.sh:
+  thanks to robbat2, the cmdline argument handling is now fixed. I moved
+  start_build to build_functions.sh cleaning up the main catalyst script some
+  more.
 
   11 Oct 2003; <zhen@gentoo.org> include/build_functions.sh:
   fixed SRCBALL and DESTBALL, making it transparent for profiles
